Fix low contrast rating for dropdown menu item hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ nav h1 {
 }
 
 #menu > li:hover {
-    background-color: rgba(108,116,140, .4);
+    background-color: rgb(97, 33, 76, .8);
 }
 
 #menu > li:hover a {
